# cratemind

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  release-please-config.json  setup.ps1  setup.sh
.githooks/: commit-msg  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr-build.yml  release-please.yml
docs/: ROADMAP.md
scripts/: setup-dev.sh
src/cratemind/: __init__.py  cli.py  config.py  ffmpeg.py  manifest.py  pipeline.py  prefs.py  runner.py  share.py  update.py
src/cratemind/analysis/: analyzer.py  bpm.py  key.py
src/cratemind/download/: backends.py  base.py  tags.py  write_tags.py
src/cratemind/genre/: audio.py  canonical.py  deezer.py  resolve.py
src/cratemind/organize/: sorter.py  template.py
src/cratemind/store/: db.py
src/cratemind/web/: app.py  jobs.py  view.py
src/cratemind/web/templates/: _results.html  crates.html  index.html  settings.html
tests/: conftest.py  test_analysis.py  test_audio.py  test_bpm.py  test_canonical.py  test_config.py  test_deezer.py  test_download.py  test_export_share.py  test_ffmpeg.py  test_import.py  test_jobs.py  test_key.py  test_manifest.py  test_manifest_export.py  test_pipeline.py  test_prefs.py  test_runner.py  test_share.py  test_store.py  test_template.py  test_update.py  test_web.py  test_write_tags.py
